@@ -254,8 +254,8 @@ public class ReplayCommand implements CommandExecutor, TabCompleter {
             if (sender.hasPermission("replay.start")) completions.add("start");
             if (sender.hasPermission("replay.stop")) completions.add("stop");
             if (sender.hasPermission("replay.play")) completions.add("play");
-            if (sender.hasPermission("replay.list")) completions.add("list");
             if (sender.hasPermission("replay.delete")) completions.add("delete");
+            if (sender.hasPermission("replay.list")) completions.add("list");
 
             return completions.stream()
                     .filter(s -> s.startsWith(args[0].toLowerCase()))
@@ -272,9 +272,13 @@ public class ReplayCommand implements CommandExecutor, TabCompleter {
 
             String prefix = joinArgs(args, 1).toLowerCase();
 
-            return cachedReplays.stream()
+            List<String> matches = cachedReplays.stream()
                     .filter(name -> name.toLowerCase().startsWith(prefix))
                     .toList();
+            if (matches.isEmpty() && args.length == 2) {
+                return List.of("<name>");
+            }
+            return matches;
         }
 
         if (args.length >= 2 && args[0].equalsIgnoreCase("stop")) {
@@ -283,26 +287,44 @@ public class ReplayCommand implements CommandExecutor, TabCompleter {
 
             String prefix = joinArgs(args, 1).toLowerCase();
 
-            return Replay.getInstance()
+            List<String> matches = Replay.getInstance()
                     .getRecorderManager()
                     .getActiveSessions()
                     .keySet()
                     .stream()
                     .filter(name -> name.toLowerCase().startsWith(prefix))
                     .toList();
+            if (matches.isEmpty() && args.length == 2) {
+                return List.of("<name>");
+            }
+            return matches;
         }
 
 
         if (args.length == 2 && args[0].equalsIgnoreCase("start")) {
-            return Collections.emptyList();
+            if (!sender.hasPermission("replay.start"))
+                return Collections.emptyList();
+            return List.of("<name>");
         }
 
-        if (args.length >= 3 && args[0].equalsIgnoreCase("start")) {
+        if (args.length == 3 && args[0].equalsIgnoreCase("start")) {
+            if (!sender.hasPermission("replay.start"))
+                return Collections.emptyList();
+
+            // First player slot — only suggest player names, no duration yet
+            String currentArg = args[2].toLowerCase();
+
+            return Bukkit.getOnlinePlayers().stream()
+                    .map(Player::getName)
+                    .filter(name -> name.toLowerCase().startsWith(currentArg))
+                    .toList();
+        }
+
+        if (args.length >= 4 && args[0].equalsIgnoreCase("start")) {
             if (!sender.hasPermission("replay.start"))
                 return Collections.emptyList();
 
             // Collect already-selected player names so we don't suggest them again
-            // args[2..length-2] are already-selected players; current partial is args[length-1]
             java.util.Set<String> alreadySelected = new java.util.HashSet<>();
             for (int i = 2; i < args.length - 1; i++) {
                 alreadySelected.add(args[i].toLowerCase());
@@ -310,11 +332,18 @@ public class ReplayCommand implements CommandExecutor, TabCompleter {
 
             String currentArg = args[args.length - 1].toLowerCase();
 
-            return Bukkit.getOnlinePlayers().stream()
+            List<String> suggestions = Bukkit.getOnlinePlayers().stream()
                     .map(Player::getName)
                     .filter(name -> !alreadySelected.contains(name.toLowerCase()))
                     .filter(name -> name.toLowerCase().startsWith(currentArg))
-                    .toList();
+                    .collect(java.util.stream.Collectors.toCollection(ArrayList::new));
+
+            // Show duration hint now that at least one player is selected
+            if (currentArg.isEmpty() || "[seconds]".startsWith(currentArg)) {
+                suggestions.add("[seconds]");
+            }
+
+            return suggestions;
         }
 
         return Collections.emptyList();
